# CmakeCppLibTemplate

./: CMakeLists.txt  README.md
app/: main.cpp
inc/: lib.h
inc/CoolLib/: lib.h
src/: lib.cpp
tests/: lib.cpp  trompeloeil.h
tests/utils/: trompeloeil_integration.cpp
thirdparties/: boost.cmake  catch.cmake  fakeit.cmake  trompeloeil.cmake
